--- a/components/resbig.wxml
+++ b/components/resbig.wxml
@@ -1,46 +1,52 @@
 <import src="./card/card.wxml" />
 <template name="result">
   <view class="reslut {{ setp[0] === 9 ? '' : 'none'}}" bindtap="hideResult">
-    <view class="flex row">
-  <view class="title">公共牌</view>
-  <view class="flex column">
+    <view class="flex row" style="background:#000;border-bottom:1px solid #696974;">
+  <view class="title" style="background:0;">公共牌</view>
+  <view class="flex column" style="background:0;">
     <view class="flex-wrp">
-       <view wx:for="{{[1,2,3]}}" wx:key="index"  data-pid="{{selectCards['card'+item] ? selectCards['card'+item].pid : ''}}" data-id="card{{item}}" data-lid="{{item}}"   
+       <view wx:for="{{[1,2,3]}}" style="border:0;" wx:key="index"  data-pid="{{selectCards['card'+item] ? selectCards['card'+item].pid : ''}}" data-id="card{{item}}" data-lid="{{item}}"   
     class="flex-item {{selectCards['card'+item] ? 'car' : ''}} ">
        <block wx:if="{{selectCards['card'+item]}}">
+        <view class="carPlay">
         <image class="cardImg" src='{{"/images/" + selectCards["card"+item].id + "_" + selectCards["card"+item].c + ".png"  }}'></image>
        <image class="cardImg"  src='{{"/images/" + selectCards["card"+item].c + ".png"  }}'></image>
+        </view>
         </block>
         <block wx:else>
-          <view class="unknown">?</view>
+          <view class="unknown"><span>?</span></view>
         </block>
       </view>
     </view>
   </view>
-  <view class="flex column en">
+  <view class="flex column en"  style="background:0;">
     <view class="flex-wrp">
-      <view wx:for="{{[4,5]}}" wx:key="index" data-pid="{{selectCards['card'+item] ? selectCards['card'+item].pid : ''}}" data-id="card{{item}}" data-lid="{{item}}"   
+      <view wx:for="{{[4,5]}}" style="border:0;" wx:key="index" data-pid="{{selectCards['card'+item] ? selectCards['card'+item].pid : ''}}" data-id="card{{item}}" data-lid="{{item}}"   
     class="flex-item {{selectCards['card'+item] ? 'car' : ''}} ">
        <block wx:if="{{selectCards['card'+item]}}">
+        <view class="carPlay">
         <image class="cardImg" src='{{"/images/" + selectCards["card"+item].id + "_" + selectCards["card"+item].c + ".png"  }}'></image>
        <image class="cardImg"  src='{{"/images/" + selectCards["card"+item].c + ".png"  }}'></image>
+       </view>
         </block>
         <block wx:else>
-          <view class="unknown">?</view>
+          <view class="unknown"><span>?</span></view>
         </block>
     </view>
     </view>
   </view>
 </view>
 <view class="middle">
-  <view class='flex player' wx:for="{{players}}" wx:key="index">
-    <view style="width: 10%;padding:12px 0 0 30px;" class="user fa fa-user"> {{index+1}}</view>
+  <view style="background:0;" class='flex player' wx:for="{{players}}" wx:key="index">
+    <view style="width: 10%;margin-top:10px" class="user fa fa-user"> {{index+1}}</view>
         <block wx:if="{{!rngDesc['P'+index]}}">
-          <view wx:for="{{[item+1,item+2]}}"  wx:key="index"  data-pid="{{selectCards['card'+item] ? selectCards['card'+item].pid : ''}}" data-id="card{{item}}" data-lid="{{item}}"   
+          <view wx:for="{{[item+1,item+2]}}" style="border:0;"  wx:key="index"  data-pid="{{selectCards['card'+item] ? selectCards['card'+item].pid : ''}}" data-id="card{{item}}" data-lid="{{item}}"   
       class="rb flex-item {{selectCards['card'+item] ? 'car' : ''}} ">
         <block wx:if="{{selectCards['card'+item]}}">
+          <view class="carPlay" style="display:flex;">
           <image class="cardImg heng" src='{{"/images/" + selectCards["card"+item].id + "_" + selectCards["card"+item].c + ".png"  }}'></image>
           <image class="cardImg heng"  src='{{"/images/" + selectCards["card"+item].c + ".png"  }}'></image>
+          </view>
         </block>
         <block wx:else>
           <view class="unknown" style="padding:0 !important;width:45px;text-align:center;">?</view>
@@ -48,22 +54,27 @@
         </view>
         </block>
         <block wx:else>
-          <view data-sel="{{rngDesc['P'+index].sel}}" class="rng {{sel === (index + 24) ? 'selrng selected' : ''}}" data-lid="{{index + 24}}"  bindtap="selBox">
+          <view class="carPlayRng {{sel === (index + 24) ? 'selrng selected' : ''}}">
+          <view data-sel="{{rngDesc['P'+index].sel}}" class="rng " data-lid="{{index + 24}}"  bindtap="selBox">
             {{rngDesc['P'+index].desc}}
           </view>
+        </view>
         </block>
-        <view style="margin:10px 0 0 10px;"><p class="lose">{{!rate[index] ? '--' : rate[index][0]}}%</p></view>
+        <view style="margin:10px 0 0 10px;width:70px;"><p class="lose">{{!rate[index] ? '--' : rate[index][0]}}%</p></view>
         <view class="count" style="margin:0;padding-left:20px;">
-          <p class="win">WIN: {{!rate[index] ? '--' : rate[index][1]}}%</p>
+          <p class="win">Win: {{!rate[index] ? '--' : rate[index][1]}}%</p>
           <p class="tie">Tie: {{!rate[index] ? '--' : rate[index][2]}}%</p>
         </view>
     </view>
-    <view class="flex-wrp die" style="background:0">
-      <view style="margin:10px">死牌(Dead Cards):<span wx:for="{{selDead}}" wx:key="index">{{cards[item['id']]}}{{shap[item['c']]}} </span></view>
+    <view class="flex-wrp die" style="background:#000;bottom:0;position:absolute;border-top:1px solid #696974;width:100%;">
+      <view class="{{ selDead[0] ? '' : 'none'}}" style="margin:10px;background:#000;">死牌(Dead Cards):<span wx:for="{{selDead}}" wx:key="index">{{cards[item['id']]}}{{shap[item['c']]}} </span></view>
     </view>
     </view>
   <view class="screen">
-    截屏保存，随时分享
+    <view style="font-size:.9em;margin:5px;"> 
+      <image style="width:111px;height:18px;margin:0px 10px -3px;"  src='/images/logo.png'></image>截屏保存，随心分享
+    </view>
+    <view style="font-size:12px;color:#696974;">在微信小程序中搜索“德堡德州扑克胜率计算器” 添加关注</view>
   </view>
     </view>
 </template>
